	Fixed bug where classid attribute was not being checked from embed objects.
	Fixed bug in jsrobot tests with intermittently failing.
	Fixed bug where anchors wasn't updated properly if you edited them using IE 8.
	Fixed bug where input method on WebKit on Mac OS X would fail to initialize when sometimes focusing the editor.
Version 3.4.5 (2011-09-06)
	Fixed accessibility bug in WebKit where the right and left arrow keys would update native list boxes.
	Added new whitespace_elements option to enable users to specify specific elements where the whitespace is preserved.
	Added new merge_siblings option to formats. This option makes it possible to disable the auto merging of siblings when applying formats.
	Fixed bug in IE where trailing comma in paste plugin would cause plugin to not run correctly.
	Fixed bug in WebKit where console messages would be logged when deleting an empty document.
	Fixed bug in IE8 where caret positioned is on list item instead of paragraph when outdent splits the list
	Fixed bug with image dialogs not inserting an image if id was omitted from valid_elements.
	Fixed bug where the selection normalization logic wouldn't properly handle image elements in specific config cases.
	Fixed bug where the map elements coords attribute would be messed up by IE when serializing the DOM.
	Fixed bug where IE wouldn't properly handle custom elements when the contents was serialized.
	Fixed bug where you couldn't move the caret in Gecko if you focused the editor using the API or a UI control.
	Fixed bug where adjacent links would get merged on IE due to bugs in their link command.
	Fixed bug where the color split buttons would loose the selection on IE if the editor was placed in a frame/iframe.
	Fixed bug where floated images in WebKit wouldn't get properly linked.
	Fixed bug where the fullscreen mode in a separate window wasn't forced into IE9+ standards mode.